Add Markdown helper

--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -5,3 +5,9 @@ title: Home
 <h2>Index file!</h2>
 
 {{test}}
+
+{{#markdown}}
+# Heading One
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus ut placeat reiciendis neque libero quam ducimus beatae possimus, nobis. Laboriosam quo minima, porro fuga neque omnis incidunt consectetur natus?
+{{/markdown}}
