Add repeat helper

--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -11,3 +11,9 @@ title: Home
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus ut placeat reiciendis neque libero quam ducimus beatae possimus, nobis. Laboriosam quo minima, porro fuga neque omnis incidunt consectetur natus?
 {{/markdown}}
+
+<ul>
+  {{#repeat 5}}
+  <li>Item!</li>
+  {{/repeat}}
+</ul>
