Make data imported from external files available globally

--- a/test/fixtures/pages/index.html
+++ b/test/fixtures/pages/index.html
@@ -17,3 +17,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus ut plac
   <li>Item!</li>
   {{/repeat}}
 </ul>
+
+{{#each data}}
+  {{ this }}
+{{/each}}
