Add highlight.js Handlebars helper

--- a/test/fixtures/pages/index.html
+++ b/test/fixtures/pages/index.html
@@ -21,3 +21,9 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus ut plac
 {{#each data}}
   {{ this }}
 {{/each}}
+
+{{#code 'css'}}
+.element {
+  color: black;
+}
+{{/code}}
